--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | QR code component</title>
+  <base target="_blank">
 </head>
 
 <body>
   <main class="card">
-    <img src="images/image-qr-code.png" alt="QR Code to frontendmentor.io ">
+    <img src="assets/images/image-qr-code.png" alt="QR Code to frontendmentor.io ">
     <h2>Improve your front-end<br>skills by building projects</h2>
     <p>Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br>the next level</p>
   </main>
 
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/fortune-i-o/" target="_blank">fortune-i-o</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/fortune-i-o/">Fortune Iyoha</a>.
   </footer>
 </body>
 
