--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <main class="card">
-    <img src="assets/images/image-qr-code.png" alt="QR Code to frontendmentor.io ">
-    <h2>Improve your front-end<br>skills by building projects</h2>
+    <img src="assets/images/image-qr-code.png" alt="QR Code to frontendmentor.io">
+    <h1>Improve your front-end<br>skills by building projects</h1>
     <p>Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br>the next level</p>
   </main>
 
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/fortune-i-o/">Fortune Iyoha</a>.
+    Challenge by <a rel="noopener" href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+    Coded by <a rel="noopener" href="https://github.com/fortune-i-o/">Fortune Iyoha</a>.
   </footer>
 </body>
 
